k8s/flight-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flights-service
  labels:
    app: flights-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flights-service
  template:
    metadata:
      labels:
        app: flights-service
    spec:
      containers:
        - name: flights-service
          image: sheethalshobi/project-flights-service:latest
          ports:
            - containerPort: 5003
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5003
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /readyz
              port: 5003
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
