k8s/flight-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flight-db
spec:
  selector:
    app: flight-db
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
