k8s/flight-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flights-service
spec:
  selector:
    app: flights-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
  type: ClusterIP
