k8s/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flight-db
spec:
  clusterIP: None   
  selector:
    app: flight-db
  ports:
    - port: 27017
      targetPort: 27017
