k8s/flight-db-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flight-db-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: flight-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: flights-service
      ports:
        - protocol: TCP
          port: 27017
